fix svg width on iOS

--- a/src/assets/styles/_utilities.typography.css
+++ b/src/assets/styles/_utilities.typography.css
@@ -49,5 +49,6 @@
 
 svg.u-sup {
     max-height: .85em;
+    max-width: .85em;
 }
 
